Fix positioning on mask after converting them into paint layers

1) Colorize masks should be put either below or above the parent layer,
   depending on their blending mode.
2) Normal masks should be put below the parent layer
3) Layers should be put into the same position where they were

BUG:438397